Added Partial Least Squares Method
as recommended in the change adding the  Functional Mode Analysis
(FMA) trajectory analysis module
(https://gerrit.gromacs.org/#/c/3277/15), this is an independent
change containing PLS. The linear algebra functions required
for it's implementation are taken from the patch
Linear algebra on IrregArray2D and std::vector.

Implementation of PLS according to:

Denham, M. C. 1995. “Implementing Partial Least Squares.”
Statistics and Computing 5 (3): 191–202. doi:10.1007/BF00142661.

Change-Id: I0207bf6932078d948f185fd875ab37c3642af3a5

--- a/src/gromacs/linearalgebra/partial_least_squares/tests/CMakeLists.txt
+++ b/src/gromacs/linearalgebra/partial_least_squares/tests/CMakeLists.txt
@@ -1,7 +1,7 @@
 #
 # This file is part of the GROMACS molecular simulation package.
 #
-# Copyright (c) 2012,2013,2014,2015,2016,2017, by the GROMACS development team, led by
+# Copyright (c) 2017, by the GROMACS development team, led by
 # Mark Abraham, David van der Spoel, Berk Hess, and Erik Lindahl,
 # and including many others, as listed in the AUTHORS file in the
 # top-level source directory and at http://www.gromacs.org.
@@ -32,27 +32,6 @@
 # To help us fund GROMACS development, we humbly ask that you cite
 # the research papers on the package. Check out http://www.gromacs.org.
 
-add_subdirectory(partial_least_squares)
-
-file(GLOB LINEARALGEBRA_SOURCES *.cpp)
-
-if (NOT GMX_EXTERNAL_BLAS)
-    file(GLOB BLAS_SOURCES gmx_blas/*.cpp)
-endif()
-
-if (NOT GMX_EXTERNAL_LAPACK)
-    file(GLOB LAPACK_SOURCES gmx_lapack/*.cpp)
-endif()
-
-set(LINEARALGEBRA_SOURCES
-    ${LINEARALGEBRA_SOURCES} ${BLAS_SOURCES} ${LAPACK_SOURCES})
-
-set(LIBGROMACS_SOURCES
-    ${LIBGROMACS_SOURCES} ${LINEARALGEBRA_SOURCES} PARENT_SCOPE)
-
-gmx_install_headers(
-    eigensolver.h
-    matrix.h
-    sparsematrix.h
-    )
-
+gmx_add_unit_test(PartialLeastSquaresUnitTests partial-least-squares-linear-algebra-test
+                  partial_least_squares_tests.cpp
+                  )
