Updated mdrun comparison infrastructure
The functionality for running grompp to produce a .tpr file useful for
comparing two mdrun calculations works better as free functions than a
base class. This patch is essentially a rewrite of the interface,
though the core functionality is roughly the same.

Used raw string literals for nicer looking embedded strings.

Refs #1868

Change-Id: I4b5137b34c3da286e344809b71afd985d9c7bfab

--- a/src/programs/mdrun/tests/CMakeLists.txt
+++ b/src/programs/mdrun/tests/CMakeLists.txt
@@ -35,7 +35,7 @@
 # make an "object library" for code that we re-use for both kinds of tests
 add_library(mdrun_test_objlib OBJECT
     energyreader.cpp
-    mdruncomparisonfixture.cpp
+    mdruncomparison.cpp
     moduletest.cpp
     terminationhelper.cpp
     # PME tests
