[RFC] Basic infrastructure allowing to access an external FMM
This patch prepares GROMACS to use a fast multiple method (FMM) for Coulomb
electrostatics, as e.g. implemented by the JSC Juelich FMSolvr library(1,2),
or Rio Yokota's ExaFMM. To actually be able to use FMM electrostatics,
the GMX_WITH_FMM preprocessor variable has to be defined in
src/gromacs/fmm/fmm.h, and (for FMSolvr) the fmsolvr
git submodule needs to be cloned to src/gromacs/fmm/ together with the
fmsolver.{cpp,h} files - all of which are not part of this patch.

Following the electric field example, this patch provides several
FMM-related .mdp input file parameters. In addition, the energies
are added to the force calculation method, so that they as well can
be updated when calculating forces.

An interface for separate FMM nodes could also be added, but
probably in a separate patch.

TODO:
- Discuss how to support different flavours of FMM, i.e. the FMM
  might calculate near field and far field, or just the far field part

(1) H Dachsel. "An error-controlled fast multipole method" The Journal
of chemical physics 132.11 (2010): 119901.
(2) A Beckmann, I Kabadshow. "Portable Node-Level Performance Optimization
for the Fast Multipole Method." Recent Trends in Computational Engineering
CE2014. Springer International Publishing, 2015. 29-46.

Change-Id: I23a367e1c0cb9820cefcb6d76d72f4c479494bf0

--- a/src/gromacs/CMakeLists.txt
+++ b/src/gromacs/CMakeLists.txt
@@ -105,6 +105,7 @@ add_subdirectory(pulling)
 add_subdirectory(awh)
 add_subdirectory(simd)
 add_subdirectory(imd)
+add_subdirectory(fmm)
 if (NOT GMX_BUILD_MDRUN_ONLY)
     add_subdirectory(gmxana)
     add_subdirectory(gmxpreprocess)
