Add contribution information to webpage
We'll need a link from a high-level page on the new website to these
details, but the details and cross-links make sense to have as part of
the developer guide.

Change-Id: I0839367662804fe75cd18479db5335644f787176

--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -106,6 +106,7 @@ if (SPHINX_FOUND)
         dev-manual/build-system.rst
         dev-manual/commitstyle.rst
         dev-manual/documentation-generation.rst
+        dev-manual/contribute.rst
         dev-manual/doxygen.rst
         dev-manual/error-handling.rst
         dev-manual/formatting.rst
