Include doi strings from zenodo during release
Add functionality to include doi strings
gathered from Zenodo into the release build
source code and manual. Actual registration
of the DOI has to be handled somewhere else.

Change-Id: I1ce4c913c313e56e77e031e742367420e25da36d

--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -366,6 +366,31 @@ if (SPHINX_FOUND)
     include(SphinxMacros.cmake)
     gmx_init_sphinx_setup(${SPHINX_INPUT_DIR})
 
+    # set temporary variables for doi inclusion
+    # into the manual, plain string + some wrapping
+    # for release builds, and dummy string for non-release
+    # builds
+    if("${GMX_MANUAL_DOI}" STREQUAL "")
+      # empty string means no doi, set dummy text
+      set(GMX_MANUAL_DOI_STRING "This is not a release build of GROMACS, so please reference")
+      set(GMX_MANUAL_DOI_STRING "${GMX_MANUAL_DOI_STRING} one of the GROMACS papers and the base release of the manual.")
+    else()
+      # release version, set plain old boring string
+      set(GMX_MANUAL_DOI_STRING "Please reference this documentation as https://doi.org/${GMX_MANUAL_DOI}.")
+    endif()
+    # same for source doi, but modify the text
+    if("${GMX_SOURCE_DOI}" STREQUAL "")
+      # empty string means no release build
+      set(GMX_SOURCE_DOI_STRING "This is not a release build of GROMACS. Please reference one of the")
+      set(GMX_SOURCE_DOI_STRING "${GMX_SOURCE_DOI_STRING} GROMACS papers, as well as the base release that this version is built from.")
+      set(GMX_SOURCE_DOI_STRING "${GMX_SOURCE_DOI_STRING} Also, please state what modifcations have been performed or where the version")
+      set(GMX_SOURCE_DOI_STRING "${GMX_SOURCE_DOI_STRING} was sourced from.")
+    else()
+      # release version, give them a doi url string
+      set(GMX_SOURCE_DOI_STRING "To cite the source code for this release, please cite")
+      set(GMX_SOURCE_DOI_STRING "${GMX_SOURCE_DOI_STRING} https://doi.org/${GMX_SOURCE_DOI}.")
+    endif()
+
     set(SPHINX_CONFIG_VARS_FILE ${SPHINX_INPUT_DIR}/conf-vars.py)
     gmx_configure_version_file(conf-vars.py.cmakein ${SPHINX_CONFIG_VARS_FILE}
         EXTRA_VARS
@@ -378,6 +403,8 @@ if (SPHINX_FOUND)
             SOURCE_MD5SUM REGRESSIONTEST_MD5SUM_STRING
             GMX_TNG_MINIMUM_REQUIRED_VERSION
             GMX_LMFIT_REQUIRED_VERSION
+            GMX_MANUAL_DOI_STRING
+            GMX_SOURCE_DOI_STRING
         COMMENT "Configuring Sphinx configuration file")
     gmx_add_sphinx_input_file(${SPHINX_CONFIG_VARS_FILE})
     gmx_add_sphinx_source_files(FILES ${SPHINX_SOURCE_FILES})
