--- a/src/gromacs/CMakeLists.txt
+++ b/src/gromacs/CMakeLists.txt
@@ -169,6 +169,13 @@ gmx_configure_version_file(
 list(APPEND LIBGROMACS_SOURCES ${GENERATED_VERSION_FILE}
      $<TARGET_OBJECTS:libgromacs_external>
      $<TARGET_OBJECTS:libgromacs_generated>)
+set(GENERATED_VERSION_FILE utility/reference-doi.h)
+gmx_configure_version_file(
+    utility/reference-doi.h.cmakein ${GENERATED_VERSION_FILE}
+    EXTRA_VARS
+        GMX_SOURCE_DOI
+    )
+list(APPEND LIBGROMACS_SOURCES ${GENERATED_VERSION_FILE})
 
 # Mark some shared GPU implementation files to compile with CUDA if needed
 if (GMX_USE_CUDA)
