Copy parallelisation info from old webpage
Copied the information for parallelisation from old webpage
to the user guide, as discussed in #2297.

Change-Id: Id472ab779a6e2ca982b117a95429898a0277dc23

--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -358,6 +358,7 @@ if (SPHINX_FOUND)
         user-guide/mdp-options.rst
         user-guide/mdrun-features.rst
         user-guide/mdrun-performance.rst
+        user-guide/parallelisation.rst
         user-guide/run-time-errors.rst
         user-guide/system-preparation.rst
         user-guide/terminology.rst
