[WIP] Densityfitting for GROMACS
The idea of this toolset is to assemble functionality to deal with
density maps as e.g. from cryo electron microscopy. It will include i/o
routines for density maps (ccp4 and xplor format), a module to allow to
do fitting to cryo-EM densities during the simulation, as well as an
analysis tool to compute average densities from a trajectory.

Refs #2282 and #2281

The module that does on-the-fly fitting to density maps is at the moment
implemented using the correlation-based density fitting potential V =
k*(1 - c.c.)
as described by Orzechowski and Tama in Biophys. J. 2008 "Flexible
Fitting
of High-Resolution X-Ray Structures into Cryoelectron Microscopy Maps
Using Biased Molecular Dynamics Simulations". Other alternatives
can/will
also be added.

Current functionality summary:
- deal with CCP4 density maps (read/write/embed to .tpr)
- spread out discrete atomic positions on a density grid using Gaussian
  functions
- calculate the correlation coefficient (c.c.) between the experimental
  and the simulated density and derive the corresponding atomic forces
- read in density fitting .mdp parameters (which index group to submit
  to the potential, what k and sigma to use)
- allow the user to implement time-dependent fitting protocols
  by giving k and sigma as a function of time (similar to the simulated
  annealing protocol)
- spreading and force calculation are SIMD-accelerated

This patch originates from a) old C code written in the early days of
4.6,
so it does not yet conform to today's coding standards in GROMACS.
It is working as expected, also in parallel, and is hopefully a good
starting point for a density fitting force provider module.
b) from the "tide" trajectory analysis module written by Camilo Aponte
and
Rodolfo Briones that computes time-averaged electron density map
from an MD trajectory.

Everything is highly WIP and lots of things need to be done, some of it
are:
- get rid of the dependency on the CCP4 library cmaplib

--- a/src/gromacs/applied-forces/densityfitting/tests/CMakeLists.txt
+++ b/src/gromacs/applied-forces/densityfitting/tests/CMakeLists.txt
@@ -1,7 +1,7 @@
 #
 # This file is part of the GROMACS molecular simulation package.
 #
-# Copyright (c) 2013,2014,2015,2016,2017,2018, by the GROMACS development team, led by
+# Copyright (c) 2018, by the GROMACS development team, led by
 # Mark Abraham, David van der Spoel, Berk Hess, and Erik Lindahl,
 # and including many others, as listed in the AUTHORS file in the
 # top-level source directory and at http://www.gromacs.org.
@@ -32,54 +32,6 @@
 # To help us fund GROMACS development, we humbly ask that you cite
 # the research papers on the package. Check out http://www.gromacs.org.
 
-# make an "object library" for code that we re-use for both kinds of tests
-add_library(mdrun_test_objlib OBJECT
-    energyreader.cpp
-    mdruncomparison.cpp
-    moduletest.cpp
-    terminationhelper.cpp
-    # PME tests
-    pmetest.cpp
-    )
-
-set(testname "MdrunTests")
-set(exename "mdrun-test")
-
-gmx_add_gtest_executable(
-    ${exename}
-    # files with code for tests
-    tabulated_bonded_interactions.cpp
-    grompp.cpp
-    initialconstraints.cpp
-    rerun.cpp
-    trajectory_writing.cpp
-    trajectoryreader.cpp
-    compressed_x_output.cpp
-    swapcoords.cpp
-    interactiveMD.cpp
-    densityfitting.cpp
-    termination.cpp
-    tpitest.cpp
-    # pseudo-library for code for testing mdrun
-    $<TARGET_OBJECTS:mdrun_test_objlib>
-    # pseudo-library for code for mdrun
-    $<TARGET_OBJECTS:mdrun_objlib>
-    )
-gmx_register_gtest_test(${testname} ${exename} INTEGRATION_TEST)
-
-set(testname "MdrunMpiTests")
-set(exename "mdrun-mpi-test")
-
-gmx_add_gtest_executable(
-    ${exename} MPI
-    # files with code for tests
-    multisim.cpp
-    multisimtest.cpp
-    replicaexchange.cpp
-    domain_decomposition.cpp
-    # pseudo-library for code for testing mdrun
-    $<TARGET_OBJECTS:mdrun_test_objlib>
-    # pseudo-library for code for mdrun
-    $<TARGET_OBJECTS:mdrun_objlib>
-    )
-gmx_register_gtest_test(${testname} ${exename} MPI_RANKS 2 INTEGRATION_TEST)
+gmx_add_unit_test(DensiftForcesTest densfit-forces-test
+                  densfitforces.cpp
+                )
