--- a/src/gromacs/math/container/tests/CMakeLists.txt
+++ b/src/gromacs/math/container/tests/CMakeLists.txt
@@ -1,7 +1,7 @@
 #
 # This file is part of the GROMACS molecular simulation package.
 #
-# Copyright (c) 2013,2014,2015,2016,2018, by the GROMACS development team, led by
+# Copyright (c) 2018, by the GROMACS development team, led by
 # Mark Abraham, David van der Spoel, Berk Hess, and Erik Lindahl,
 # and including many others, as listed in the AUTHORS file in the
 # top-level source directory and at http://www.gromacs.org.
@@ -32,26 +32,5 @@
 # To help us fund GROMACS development, we humbly ask that you cite
 # the research papers on the package. Check out http://www.gromacs.org.
 
-file(GLOB MATH_SOURCES *.cpp container/*.cpp griddata/*.cpp griddata/operations/*.cpp)
-set(LIBGROMACS_SOURCES ${LIBGROMACS_SOURCES} ${MATH_SOURCES} PARENT_SCOPE)
-
-gmx_install_headers(
-    3dtransforms.h
-    do_fit.h
-    functions.h
-    gmxcomplex.h
-    units.h
-    utilities.h
-    vec.h
-    vectypes.h
-    paddedvector.h
-    )
-
-add_subdirectory(griddata)
-add_subdirectory(container)
-
-if (BUILD_TESTING)
-    add_subdirectory(tests)
-    add_subdirectory(griddata/tests)
-    add_subdirectory(container/tests)
-endif()
+gmx_add_unit_test(containerUnitTest container-test
+                  )
