--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -455,6 +455,10 @@ endif()
 ########################################################################
 include(gmxManageMPI)
 
+########################################################################
+#Process MiMiC settings
+########################################################################
+include(gmxManageMimic)
 
 ########################################################################
 #Process shared/static library settings
