--- a/src/programs/mdrun/tests/CMakeLists.txt
+++ b/src/programs/mdrun/tests/CMakeLists.txt
@@ -59,6 +59,7 @@ gmx_add_gtest_executable(
     interactiveMD.cpp
     termination.cpp
     tpitest.cpp
+    mimic_test.cpp
     # pseudo-library for code for testing mdrun
     $<TARGET_OBJECTS:mdrun_test_objlib>
     # pseudo-library for code for mdrun
@@ -72,6 +73,7 @@ set(exename "mdrun-mpi-test")
 gmx_add_gtest_executable(
     ${exename} MPI
     # files with code for tests
+    mimic_test.cpp
     multisim.cpp
     multisimtest.cpp
     replicaexchange.cpp
