Implemented QM/MM workflow inside core GROMACS. Fixes Issue #2309
Implemented MiMiC integrator along with the generation of inter-molecular exclusion lists for QM atoms both in serial and parallel parts of the code

Refs #2309

Change-Id: I35073ad69752e22968c0e2821e2fdf9f0c465b2a

--- a/src/programs/mdrun/tests/CMakeLists.txt
+++ b/src/programs/mdrun/tests/CMakeLists.txt
@@ -58,6 +58,7 @@ gmx_add_gtest_executable(
     swapcoords.cpp
     interactiveMD.cpp
     termination.cpp
+    mimic_test.cpp
     # pseudo-library for code for testing mdrun
     $<TARGET_OBJECTS:mdrun_test_objlib>
     # pseudo-library for code for mdrun
@@ -71,6 +72,7 @@ set(exename "mdrun-mpi-test")
 gmx_add_gtest_executable(
     ${exename} MPI
     # files with code for tests
+    mimic_test.cpp
     multisim.cpp
     multisimtest.cpp
     replicaexchange.cpp
