Implemented changes to preprocessor to work with MiMiC QM/MM
Added new integrator "mimic" and updated usage of QMMM-grps to be used
with MiMiC QM/MM. Updated code zeros charges withing QM region and
changes bonds to CONNBOND and updates exclusion lists to exclude
non-bonded interactions between quantum atoms

Refs #2308

Change-Id: I34e798ae0c54457dad8f9a8f220482468db34708

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -200,6 +200,9 @@ gmx_dependent_option(
     ON
     GMX_MPI)
 mark_as_advanced(GMX_MPI_IN_PLACE)
+
+option(GMX_MIMIC "Enable MiMiC QM/MM interface (CPMD is required)" OFF)
+
 option(GMX_FAHCORE "Build a library with mdrun functionality" OFF)
 mark_as_advanced(GMX_FAHCORE)
 
