Implemented QM/MM workflow inside core GROMACS. Fixes Issue #2309
Implemented MiMiC integrator along with the generation of inter-molecular exclusion lists for QM atoms both in serial and parallel parts of the code

Refs #2309

Change-Id: I35073ad69752e22968c0e2821e2fdf9f0c465b2a

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -461,6 +461,10 @@ endif()
 ########################################################################
 include(gmxManageMPI)
 
+########################################################################
+#Process MiMiC settings
+########################################################################
+include(gmxManageMimic)
 
 ########################################################################
 #Process shared/static library settings
