Organize for recording 2016-era release notes and add them
This hierarchical organization will make it easy for us to present to
users that there were two maintained release series at the time of
writing, while making available links to the releases notes of
unmaintained series, and having a straightforward path for migrating
the 2016 folder to the older folder and updating the appropriate
links.

In master branch, we will have stub .rst files in
docs/release-notes/major/ that we can fill out as functionality
changes, and movev to docs/release-notes/2019/major when we
make the release-2019 branch.

Changes to release notes in release branches will merge naturally.

Later, we can make sure that tarballs can have a useful plain-text
version built into them via sphinx also.

Change-Id: Ie35f90a616cb89727f5a9600389fdf228ecd03cb

--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -134,6 +134,19 @@ if (SPHINX_FOUND)
         release-notes/2018/major/removed-features.rst
         release-notes/2018/major/portability.rst
         release-notes/2018/major/miscellaneous.rst
+        release-notes/2016/2016.5.rst
+        release-notes/2016/2016.4.rst
+        release-notes/2016/2016.3.rst
+        release-notes/2016/2016.2.rst
+        release-notes/2016/2016.1.rst
+        release-notes/2016/major/highlights.rst
+        release-notes/2016/major/new-features.rst
+        release-notes/2016/major/performance.rst
+        release-notes/2016/major/tools.rst
+        release-notes/2016/major/bugs-fixed.rst
+        release-notes/2016/major/removed-features.rst
+        release-notes/2016/major/miscellaneous.rst
+        release-notes/older/index.rst
         user-guide/index.rst
         user-guide/cutoff-schemes.rst
         user-guide/getting-started.rst
