Avoid using global variables in programs
Using global variables defined in libgromacs and
used from outside causes issues if only lazy
binding is available.

Change-Id: Id1e960d7c638476d3f7ace339a327040f516f6fc

--- a/src/gromacs/mdrunutility/CMakeLists.txt
+++ b/src/gromacs/mdrunutility/CMakeLists.txt
@@ -36,6 +36,7 @@ gmx_add_libgromacs_sources(
     handlerestart.cpp
     mdmodules.cpp
     threadaffinity.cpp
+    repl_ex.cpp
     )
 
 if (BUILD_TESTING)
